v2_ros2_ws/log/build_2023-09-15_22-13-10/robot/stderr.log
  File "/home/jetson/ros2_ws/install/robot/lib/python3.8/site-packages/robot/motor_controller.py", line 41
    if left_ratio = 1.0:
                  ^
SyntaxError: invalid syntax

